# Argus

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE  README.md  pyproject.toml  setup.cfg
argus/: Leaderboard.py  __init__.py  __main__.py  app.py  checks.py  client.py  common.py  config.py  conifg.py  constants.py  errors.py  formatter.py  logger.py  modals.py  models.py  overwrites.py  tasks.py  utils.py  voice.py  web.py
argus/cli/: __init__.py  start.py
argus/db/: __init__.py  mongo.py
argus/db/models/: __init__.py  guild.py  user.py
argus/models/: __init__.py  guild.py
argus/pages/: Database_Inspector.py
argus/plugins/: debate.py  election.py  global.py  layout.py  parliament.py  security.py
argus/web/api/: __init__.py  oauth_client.py
argus/web/api/v1/: __init__.py  oauth_client.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: Footer.vue  Navigation.vue
frontend/src/router/: index.ts
frontend/src/settings/themes/: dark.ts  light.ts
frontend/src/stores/: theme.ts
frontend/src/views/: Home.vue
plugins/: debate.py  election.py  global.py  layout.py  meta.py  parliament.py  security.py
resources/: citizenship_question_bank.json  propositions.txt
