[tool.towncrier]
package = "argus"
package_dir = "argus"
directory = "changes"
filename = "CHANGELOG.rst"
issue_format = "`#{issue} <https://github.com/OpenDebates/Argus/issues/{issue}>`_"
type = [
    { name = "Breaking Changes",            directory = "breaking",     showcontent = true },
    { name = "Deprecation",                 directory = "deprecation",  showcontent = true },
    { name = "Features",                    directory = "feature",      showcontent = true },
    { name = "Bugfixes",                    directory = "bugfix",       showcontent = true },
    { name = "Documentation Improvements",  directory = "doc",          showcontent = true },
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --ignore=docs/conf.py --ignore=setup.py --ignore=benchmark --ignore=ci --ignore=.eggs --doctest-modules --doctest-glob=/*.rst --tb=short"
norecursedirs = [
	".git",
	".tox",
	".env",
	"dist",
	"build",
	"migrations"
]
testpaths = [
    "tests"
]
python_files = [
	"test_*.py",
	"*_test.py",
	"tests.py"
]

[tool.poetry]
name = "argus"
version = "1.0.0-alpha.0"
description = "Elections and Debates for Discord Servers"
authors = ["Taven <taven@opendebates.net>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/OpenDebates/Argus"
repository = "https://github.com/OpenDebates/Argus"
documentation = "https://wiki.opendebates.net/en/argus/manual"
keywords = [
	"debate",
	"discord",
    "openskill",
    "opendebates"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: AsyncIO",
	"Intended Audience :: Other Audience",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Natural Language :: English",
	"Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications :: Chat"
]
packages = [
    { include = "Argus" }
]
include = [
    ".bumpversion.cfg",
    ".coveragerc",
    ".editorconfig",
    ".readthedocs.yml",
    "AUTHORS.rst",
    "tests/*",
    "poetry.lock"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
toml = "^0.10.2"
schema = "^0.7.5"
dnspython = "^2.2.1"
odmantic = "^0.9.1"
openskill = "^2.5.1"
certifi = "^2022.9.24"
discord-py = "^2.1.0"
uvloop = {version = "^0.17.0", platform = "linux"}
matplotlib = "^3.6.2"
pyrankvote = "^2.0.6"
cachetools = "^5.2.0"
pytz = "^2022.6"
humanize = "^4.4.0"
sentry-sdk = "^1.11.1"
loguru = "^0.6.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
furo = "^2022.9.29"
pygments = "^2.13.0"

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.release.dependencies]
isort = "^5.10.1"
twine = "^4.0.1"
codecov = "^2.1.12"
bump2version = "^1.0.1"
black = "^22.10.0"
towncrier = "^22.8.0"
build = "^0.9.0"

[tool.poetry.scripts]
argus = 'argus.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
