[metadata]
name = argus
version = attr: argus.__version__
description = Elections and Debates for Discord Servers
author = Taven <taven@opendebates.net>
author_email = taven@opendebates.net
license = AGPL-3.0-only
license_file = LICENSE
url = https://github.com/OpenDebates/Argus
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = any
classifiers =
	Development Status :: 1 - Planning
	Environment :: Console
	Framework :: AsyncIO
	Intended Audience :: Other Audience
	License :: OSI Approved :: GNU Affero General Public License v3
	Natural Language :: English
	Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Communications :: Chat
keywords =
    debate
    discord
    openskill
    opendebates

[options]
packages = find:
python_requires = >=3.10
install_requires =
    toml ~= 0.10.2
	motor ~= 3.0.0
    schema ~= 0.7.5
    dnspython ~= 2.2.1
    openskill ~= 2.3.0
    certifi ~= 2021.10.8
    colorama ~= 0.4.4; os_name=='nt'
    structlog-sentry-logger ~= 0.17.4
    structlog ~= 21.5.0
    discord.py @ git+https://github.com/Rapptz/discord.py@master#egg=discord.py

[options.extras_require]
docs =
	Sphinx ~= 4.4.0
	furo ~= 2022.3.4
    Pygments ~= 2.11.2
release =
    isort ~= 5.10.1
    twine ~= 3.8.0
    bump2version ~= 1.0.1
    black ~= 22.3.0
    towncrier ~= 21.9.0
    build ~= 0.7.0

[options.entry_points]
console_scripts =
    argus = argus.__main__:main
